[tool.poetry]
name = "optimal-smugglers-cove"
version = "0.1.0"
description = ""
authors = ["Zach Morrissey <zachmor05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ortools = "^9.8.3296"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
