[project]
name = "optimal-smugglers-cove"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
  "ortools>=9.8.3296,<10",
]

[dependency-groups]
dev = [
  "ruff>=0.15.10,<1",
]

[tool.uv]
package = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
